--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
 		<version>2-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
+	<scm>
+		<connection>scm:git:https://github.com/liveSense/org.liveSense.framework.wro4j.git</connection>
+		<developerConnection>scm:git:https://github.com/liveSense/org.liveSense.framework.wro4j.git</developerConnection>
+		<url>https://github.com/liveSense/org.liveSense.framework.wro4j</url>
+	</scm>
 
 	<artifactId>org.liveSense.framework.wro4j</artifactId>
 	<packaging>bundle</packaging>
