--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,13 @@
 		<version>1.0.3</version>
 		<relativePath>..</relativePath>
 	</parent>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.3</version>
 	<scm>
 		<connection>scm:git:https://github.com/liveSense/org.liveSense.framework.wro4j.git</connection>
 		<developerConnection>scm:git:https://github.com/liveSense/org.liveSense.framework.wro4j.git</developerConnection>
 		<url>https://github.com/liveSense/org.liveSense.framework.wro4j</url>
-	</scm>
+	  <tag>1.0.3</tag>
+  </scm>
 
 	<artifactId>org.liveSense.framework.wro4j</artifactId>
 	<packaging>bundle</packaging>
@@ -132,7 +133,7 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore></ignore>
+										<ignore />
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
